<resources>
    <string name="app_name">AppMan</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home">activity_home</string>
    <string name="title_activity_signup">activity_signup</string>
    <string name="title_login_activity">Log In</string>
    <string name="fname_hint">First Name</string>
    <string name="username_hint">Username</string>
    <string name="lname_hint">Last Name</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="Confirm_passhint">Confirm Password</string>
</resources>
